add ts types to html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
   <h2>TypeScript party</h2>
-
+  <h2>Core Types</h2>
+  <ul>
+    <li>Number: all numbers, same as JS</li>
+    <li>String: all text values, same as JS</li>
+    <li>Boolean: true, false; no truthy falsy values</li>
+  </ul>
 </body>
 </html>
