add css and type inference def

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Understanding TypeScript</title>
   <script src="app.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>TypeScript party</h2>
@@ -14,6 +15,12 @@
     <li>Number: all numbers, same as JS</li>
     <li>String: all text values, same as JS</li>
     <li>Boolean: true, false; no truthy falsy values</li>
+    <li>Object: any JS object, and more specific types</li>
   </ul>
+  <p>TypeScript does not change run-time js, it helps us through development</p>
+  <p>--TypeScript is static while JS is dynamic</p>
+  <h2>Assigning types</h2>
+  <p>Type inference: TS does its best to understand type by looking at the variable assignment. If a variable is assigned a value, TS gets it. However, if you declare a variable without setting a value, it is good practice to assign a type. For example: </p>
+  <p>let number1: number</p>
 </body>
 </html>
