--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <li>String: all text values, same as JS</li>
     <li>Boolean: true, false; no truthy falsy values</li>
     <li>Object: any JS object, and more specific types</li>
+    <li>Array: any JS array, and more specific types</li>
+    <li>Tuple: not recognized in JS, recall a tuple is an array with a fixed length</li>
+    <li>enum: {NEW, OLD}</li>
+    <li>any: * </li>
   </ul>
   <p>TypeScript does not change run-time js, it helps us through development</p>
   <p>--TypeScript is static while JS is dynamic</p>
   <h2>Assigning types</h2>
   <p>Type inference: TS does its best to understand type by looking at the variable assignment. If a variable is assigned a value, TS gets it. However, if you declare a variable without setting a value, it is good practice to assign a type. For example: </p>
   <p>let number1: number</p>
+  <p></p>
 </body>
 </html>
