add union types

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li>Array: any JS array, and more specific types</li>
     <li>Tuple: not recognized in JS, recall a tuple is an array with a fixed length</li>
     <li>enum: {NEW, OLD}</li>
-    <li>any: * </li>
+    <li>any: * (avoid)</li>
   </ul>
   <p>TypeScript does not change run-time js, it helps us through development</p>
   <p>--TypeScript is static while JS is dynamic</p>
@@ -27,5 +27,6 @@
   <p>Type inference: TS does its best to understand type by looking at the variable assignment. If a variable is assigned a value, TS gets it. However, if you declare a variable without setting a value, it is good practice to assign a type. For example: </p>
   <p>let number1: number</p>
   <p></p>
+  <h2>Union Types</h2>
 </body>
 </html>
