--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <p>Type inference: TS does its best to understand type by looking at the variable assignment. If a variable is assigned a value, TS gets it. However, if you declare a variable without setting a value, it is good practice to assign a type. For example: </p>
   <p>let number1: number</p>
   <p></p>
-  <h2>Union Types</h2>
+  <h2><a href="https://www.typescriptlang.org/docs/handbook/unions-and-intersections.html">Union Types</a> </h2>
+  <h2> <a href="https://www.typescriptlang.org/docs/handbook/literal-types.html">Literal Types</a> </h2>
 </body>
 </html>
