add link to docs

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h2>TypeScript party</h2>
+  <h4><a href="https://www.typescriptlang.org/docs/">dem doc</a></h4>
   <h2>Core Types</h2>
   <ul>
     <li>Number: all numbers, same as JS</li>
