--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
   <p>A literal is a more concrete sub-type of a collective type. There are three sets of literal types available in TypeScript today: strings, numbers, and booleans; by using literal types you can allow an exact value which a string, number, or boolean must have. In practice string literal types combine nicely with union types, type guards, and type aliases. You can use these features together to get enum-like behavior with strings.</p>
   <h2><a href="https://www.typescriptlang.org/docs/handbook/2/everyday-types.html#type-aliases">Type Aliases</a></h2>
   <p>A type alias is exactly that - a name for any type. Aliases are only that--aliases. You cannot use type aliases to different "versions" of the same type. You create aliases with the <em>type keyword</em></p>
+  <h2>Function Type</h2>
+  <h2>Unknown Type</h2>
 </body>
 </html>
