--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
   <p>A type alias is exactly that - a name for any type. Aliases are only that--aliases. You cannot use type aliases to different "versions" of the same type. You create aliases with the <em>type keyword</em></p>
   <h2>Function Type</h2>
   <h2>Unknown Type</h2>
+  <h2>Never Type</h2>
 </body>
 </html>
