--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button>click me</button>
   <h2>TypeScript party</h2>
   <h4><a href="https://www.typescriptlang.org/docs/">dem doc</a></h4>
   <h2>Core Types</h2>
